# eioku

./: .dockerignore  .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  DEVLOG.md  README.md  create-pr.sh  post.md
backend/: .gitignore  README.md  alembic.ini  gunicorn.conf.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 10a71bc9d989_create_object_labels_projection_table.py  2fb94f359c6b_create_faces_table.py  325d54cd2340_create_face_clusters_projection_table.py  3e41b8d4859f_create_objects_table.py  4022c4cef20d_add_file_hash_to_videos_table.py  40b2ad679602_create_transcriptions_table.py  43a089aa1730_create_artifact_selections_table.py  577ef37f8df5_create_videos_table.py  6d521ce5b616_create_artifacts_table.py  7d93a6c78758_create_runs_table.py  9411c08bffe8_create_path_configs_table.py  a1b2c3d4e5f6_add_primary_key_to_transcript_fts.py  afc3fae0d4ef_create_scenes_table.py  b2c3d4e5f6a7_add_primary_key_to_ocr_fts.py  b3f1edd0a582_initial_migration.py  c6f63e560f88_create_scene_ranges_projection_table.py  d1e2f3a4b5c6_add_language_to_tasks.py  e7f8a9b0c1d2_create_video_locations_projection_table.py  ed9b9d2014a1_create_transcript_fts_table.py  f8a2b3c4d5e6_create_ocr_fts_projection_table.py  f9a0b1c2d3e4_add_file_created_at_to_videos_table.py  g1h2i3j4k5l6_add_global_jump_indexes.py
backend/config/: content_creator.json
backend/src/: main.py  main_api.py  main_worker.py  show_tasks.py
backend/src/api/: artifact_controller.py  artifact_search_controller.py  global_jump_controller.py  path_controller_full.py  schemas.py  task_routes.py  thumbnail_controller.py  video_controller.py
backend/src/commands/: __init__.py  resync_projections.py
backend/src/config/: redis_config.py
backend/src/database/: connection.py  migrations.py  models.py
backend/src/domain/: artifact_transformation.py  artifacts.py  exceptions.py  models.py  schema_initialization.py  schema_registry.py  task_registry.py  transcription.py
backend/src/global_jump/: __init__.py  exceptions.py  models.py  schemas.py
backend/src/repositories/: artifact_repository.py  face_repository.py  interfaces.py  object_repository.py  path_config_repository.py  run_repository.py  scene_repository.py  selection_policy_manager.py  task_repository.py  transcription_repository.py  video_repository.py
backend/src/services/: config_loader.py  face_detection_service.py  face_detection_task_handler.py  find_within_video_service.py  global_jump_service.py  job_producer.py  jump_navigation_service.py  object_detection_task_handler.py  ocr_service.py  ocr_task_handler.py  place_detection_service.py  place_detection_task_handler.py  processing_profiles.py  projection_sync_service.py  reconciliation_service.py  reverse_geocoding_service.py  (+8 more)
backend/tests/: test_api.py  test_arq_worker.py  test_artifact_api.py  test_artifact_domain.py  test_artifact_repository.py  test_artifact_search_controller.py  test_artifact_transformation.py  test_artifact_transformer.py  test_backward_compatibility.py  test_clip_export.py  test_database.py  test_face_detection_task_handler.py  test_face_model.py  test_face_repository.py  test_find_within_video_service.py  test_full_pipeline_integration.py  test_global_jump_router.py  test_global_jump_service.py  test_job_producer.py  test_jump_navigation_service.py  test_main.py  test_metadata_schema.py  test_object_detection.py  test_object_model.py  test_object_repository.py  test_ocr_task_handler.py  test_path_config_model.py  test_path_config_repository.py  test_path_routes.py  test_performance.py  test_place_detection.py  test_projection_sync_service.py  test_reconciler.py  test_redis_result_poller.py  test_run_repository.py  test_scene_artifact_integration.py  test_scene_model.py  test_scene_repository.py  test_schema_initialization.py  test_schema_registry.py  (+13 more)
ml-service/: Dockerfile  README.md  gunicorn.conf.py  pyproject.toml
ml-service/src/: __init__.py  main.py  main_worker.py
ml-service/tests/: test_app.py  test_arq_worker.py  test_input_validation.py  test_job_handler.py  test_model_manager.py  test_thumbnail_extractor.py
(+133 files in other folders)
