[tool.poetry]
name = "eioku"
version = "0.1.0"
description = "Semantic Video Search Platform"
authors = ["Eioku Team <team@eioku.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
pyyaml = "^6.0.3"
gunicorn = "^23.0.0"
xxhash = "^3.6.0"
psycopg2-binary = "^2.9.9"
arq = "^0.26"
httpx = "^0.25.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = []
