[tool.poetry]
name = "eioku-ml-service"
version = "0.1.0"
description = "Eioku ML Service - ML inference job consumer (CPU)"
authors = ["Eioku Team <team@eioku.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.0"
ultralytics = "^8.0.0"
faster-whisper = "^1.2.1"
easyocr = "^1.7.0"
opencv-python = "^4.8.0"
numpy = "^1.24"
pillow = "^10.0"
# PyTorch CPU-only (no CUDA)
torch = "^2.1"
torchvision = "^0.16"
arq = "^0.26"
sqlalchemy = "^2.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"
python-json-logger = "^2.0.7"
xxhash = "^3.4.1"
redis = "^5.0.0"
psutil = "^5.9.0"
pyexiftool = "^0.5.5"
geopy = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
